MNEMONIC-668: Obsolete java arg line due to JDK14 migration removed
Signed-off-by: Chunyong He <chunyong.he@gmail.com>